    * Change the signal_io method in the Sys::Signal class is renamed to signal_go.
      [Before]
      static method signal_io : Sys::Signal::Handler ($signum : int, $fd : int);
      [After]
      static method signal_go : Sys::Signal::Handler ($signum : int);
      
    * Add the SET_SIG_GO_WRITE_FD method to the Sys::Signal class.
    
0.499 2023-11-17
  [New Features and Incompatible Changes]
    * Add the eq method to the Sys::Signal::Handler.
0.498 2023-11-16
  [New Features and Incompatible Changes]
    * Add the eq method to the Sys::Signal::Handler.
    * The signal method returns the old signal handler.
    * Remove the SIG_DFL and SIG_DFL class variables from the Sys::Signal class and add the SIG_DFL and SIG_DFL methods.
    * Remove the Sys::Signal::Handler::Ignore class.
    * Remove the Sys::Signal::Handler::Default class.
    * The signal method in the Sys class returns the old signal handler.
    * Add the signal_io method to the Sys::Signal class.
    * Add the SIG_IO method to the Sys::Signal class.
    * Add the close method to the Sys class.
    
      static method close : int ($stream : Sys::IO::FileStream);
    
0.497 2023-11-16
  [New Features and Incompatible Changes]
    * Add $len argument to the send method in the Sys class and changes argument order.
      
      [Before]
      static method sendto : int ($sockfd : int, $buf : string, $len : int, $flags : int, $addr : Sys::Socket::Sockaddr, $addrlen : int, $buf_offset : int = 0);
      
      [After]
      static method send : int ($sockfd : int, $buf : string, $flags : int, $addr : Sys::Socket::Sockaddr = undef, $len : int = -1, $buf_offset : int = 0);
      
0.496 2023-11-16
  [New Features]
    * Add $buf_offset argument to the sendto method in the Sys::Socket class.
      
      static method sendto : int ($sockfd : int, $buf : string, $len : int, $flags : int, $addr : Sys::Socket::Sockaddr, $addrlen : int, $buf_offset : int = 0);
