@@ -258,4 +258,9 @@ class Sys::IO::Constant {
   native static method _IOLBF : int ();
 
   native static method _IOFBF : int ();
+
+  native static method O_BINARY : int ();
+  
+  native static method O_TEXT : int ();
+
 }
